Fix little problem where z-index made mocha stat bar disappear

--- a/adapters/mocha.css
+++ b/adapters/mocha.css
@@ -1,3 +1,4 @@
 #mocha-stats#mocha-stats {
   color: rgba(0, 0, 0, 0.7);
+  z-index: 1000000000;
 }
